<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_WriteDouble" Id="{bd6826a6-616d-4379-89c3-33633543bf20}" SpecialFunc="None">
    <Declaration><![CDATA[// Writes a double field value, without a tag, to the stream.
FUNCTION F_WriteDouble : HRESULT
VAR_IN_OUT
    aBuffer : ARRAY [*] OF BYTE;
    stState : ST_WriterInternalState;
END_VAR
VAR_INPUT CONSTANT
    fValue : LREAL;
END_VAR
VAR CONSTANT
    cLength : UDINT := SIZEOF(fValue);
END_VAR
VAR
    fTmp : LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
F_WriteDouble := S_OK;

IF stState.nBufferSize - stState.nBufferPos < cLength THEN
    F_WriteDouble := stState.eWriterErrorCode := E_WriterErrorCode.TruncatedMessage;
    stState.bError := TRUE;
    RETURN;
END_IF
{warning 'TODO: Check for endianess?'}
fTmp := fValue;

MEMCPY(destAddr:= ADR(aBuffer[stState.nBufferPos]), srcAddr:= ADR(fTmp), n:= cLength);
stState.nBufferPos := stState.nBufferPos + cLength;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>