<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_WriteRawBytes" Id="{03486a0e-d593-43a1-9f38-f3fba2cd9d73}" SpecialFunc="None">
    <Declaration><![CDATA[// Writes out part of an array of bytes.
FUNCTION F_WriteRawBytes : HRESULT
VAR_IN_OUT
    aBuffer : ARRAY [*] OF BYTE;
    stState : ST_WriterInternalState;
END_VAR
VAR_IN_OUT CONSTANT
    aBytes  : ARRAY [*] OF BYTE;
END_VAR
VAR_INPUT CONSTANT
    nLength : UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
F_WriteRawBytes := S_OK;

IF nLength > stState.nBufferSize - stState.nBufferPos THEN
    F_WriteRawBytes := stState.eWriterErrorCode := E_WriterErrorCode.TruncatedMessage;
    stState.bError := TRUE;
    RETURN;
END_IF

IF nLength > TO_UDINT(UPPER_BOUND(aBytes, 1) + 1) THEN
    F_WriteRawBytes := stState.eWriterErrorCode := E_WriterErrorCode.NotEnoughMem;
    stState.bError := TRUE;
    RETURN;
END_IF

MEMCPY(destAddr:= ADR(aBuffer[stState.nBufferPos]), srcAddr:= ADR(aBytes[LOWER_BOUND(aBytes,1)]), n:=  nLength);
stState.nBufferPos := stState.nBufferPos + nLength;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>